fix alignment of radio and checkboxes

--- a/src/general/inputs.scss
+++ b/src/general/inputs.scss
@@ -159,6 +159,7 @@ input[type="checkbox"] {
   border: 1px solid var(--secondary-light);
   box-shadow: inset 0 0 0 0.185rem var(--secondary-bg);
   background: var(--secondary-bg);
+  vertical-align: text-top;
 
   &[type="checkbox"] {
     border-radius: var(--border-radius);
